# Mathematical-Practicum

./: .gitignore  README.md  aufgabe_1.cpp  aufgabe_1_test.cpp  mapra_test.h  prime_printer.cpp  prime_printer.h  printPrimeNumber
Part_1/: README.md  aufgabe_1.cpp  aufgabe_1_test.cpp  mapra_test.h  prime_printer.h
Part_2/: README.md
Part_2/include/: bubblesort.h  heapsort.h  insertionsort.h  mergesort.h  quicksort_median3.h  quicksort_simple.h  selectionsort.h  unit.h
Part_2/src/: bubblesort.cpp  example_test.cpp  heapsort.cpp  insertionsort.cpp  mapra_check.cpp  mergesort.cpp  quicksort_median3.cpp  quicksort_simple.cpp  selectionsort.cpp  test.cpp
Part_2/test_files/: example_test.cpp  mapra_check.cpp  test.cpp
Part_2c/: Makefile  README.md  sort  test
Part_2c/include/: bubblesort.h  io.h  mapra_test.h  mergesort.h  selectionsort.h  student.h  unit.h
Part_2c/src/: bubblesort.cpp  mergesort.cpp  selectionsort.cpp  student.cpp
Part_2c/test/: main.cpp  mapra_check.cpp
Part_2c/test_files/: main.cpp  test.cpp
Part_3/: Makefile  README.md  tabu  tabu_lsg
Part_3/include/: Element.h  TabuSearch.h  element.h
Part_3/src/: TabuSearch.cpp  main.cpp
Part_4/: .gitignore  CMakeLists.txt
Part_4/include/: matrix.h  vector.h
Part_4/include/mapra/: matrix.h  vector.h
Part_4/src/: loesung.cpp
Part_4/test/: test_matrix.cpp  test_vector.cpp
Part_4/tests/: test_matrix.cpp  test_vector.cpp
Pral_5a/: .gitignore  CMakeLists.txt  README  sfml_test_manual
Pral_5a/cmake/: dependencies.cmake  dependencies_M1.cmake
Pral_5a/include/astern/: sfml_visualizer.h
Pral_5a/src/: a_stern.cpp  sfml_test.cpp  sfml_visualizer.cpp
